[project]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Intended Audience :: Developers",
]
description = "Method variant decorator"
dynamic = ["version"]
keywords = ["varmeth", "decorator", "method variant"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Nikhil Dhandre", email = "ndhandre@redhat.com"},
  {name = "Peter Savage", email = "psavage@redhat.com"},
]
name = "varmeth"
readme = "README.md"
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
  "pre-commit",
]
docs = ["sphinx"]
test = [
  "pre-commit",
  "pytest",
  "pytest-cov",
]

[project.urls]
repository = "https://github.com/RedHatQE/varmeth"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
packages = ["src/varmeth"]

[tool.hatch.build.targets.sdist]
packages = ["src/varmeth"]

[tool.hatch.version]
source = "vcs"
