[metadata]
name = varmeth
author = Peter Savage, Milan Falesnik
author-email = psavage@redhat.com
maintainer = Peter Savage
maintainer_email = psavage@redhat.com
license_file = LICENSE
description = Method variant decorator
keywords =
    varmeth
    decorator
url = https://github.com/digitronik/varmeth
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
zip_safe = False
setup_requires = setuptools_scm
include_package_data = True

[options.packages.find]
where = src

[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100
